--- a/style.css
+++ b/style.css
@@ -1,173 +1,247 @@
-@font-face {
-    font-family: 'Bluu-Next-Bold';
-    src:url('Bluu-Next-Bold.ttf.woff') format('woff'),
-        url('Bluu-Next-Bold.ttf.svg#Bluu-Next-Bold') format('svg'),
-        url('Bluu-Next-Bold.ttf.eot'),
-        url('Bluu-Next-Bold.ttf.eot?#iefix') format('embedded-opentype'); 
-    font-weight: normal;
-    font-style: normal;
+body {
+  background-color: black;
+  background: linear-gradient(to bottom, black, transparent ), url(./assets/simple_starfield_background__1_by_reis1989_da950d0.jpg);
+  background-repeat: no-repeat;
+  background-size:cover;
+  width: 100%;
 }
 
 .background1 {
-    background-image: url(./assets/background1.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-}
-/* Need to do an overlay or gradient or both */
-.background1::after {
-    background: rgba 16,20,27,.4;
-    background-image: linear-gradient(rgba(16,20,27,0),rgba(16,20,27,0) 45%,#10141b 90%);
-}
-
-body {
-    background-color: black;
+  background: linear-gradient(to top, black, transparent ), url(./assets/background1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
 }
 
 .heading {
-    height: 3.5vw;
-       
+  height: 3.5vw;
+  position: sticky;
 }
 
-#login{
-    font-size: 7px;
-    margin: 8px 63px 5px 0px;
-    padding: 3px 10px;
-    border-radius: 1px;
-    float: right;
-    text-transform: uppercase;
-    color: #F9F4F2;
-    background-color: #6B63B5;
-    font-family: 'Poppins', sans-serif;
-    border: none;
-    
+#login {
+  font-size: 7px;
+  margin: -25px 63px 5px 0px;
+  padding: 3px 10px;
+  border-radius: 1px;
+  float: right;
+  text-transform: uppercase;
+  color: #f9f4f2;
+  background-color: #6b63b5;
+  font-family: "Poppins", sans-serif;
+  border: none;
 }
 
-#login:hover{
-    background-color: #514a92;
+#login:hover {
+  background-color: #514a92;
 }
 
-#logo{
-    height: 3.5vw;
-       
+#logo {
+  height: 3vw;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+header {
+  position: sticky;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  overflow: hidden;
+  
 }
 
 .nav-bar {
-    border-top: 1px solid hsla(0,0%,100%,.15);
-    position: relative;
-    background-color: transparent;
-        
+  border-top: 1px solid hsla(0, 0%, 100%, 0.15);
+  position: relative;
+  background-color: transparent;
+   
 }
 
-.nav-bar:hover{
-    
+.nav-bar:hover {
 }
 
 ul {
-    list-style: none;
-    border-bottom: 1px solid transparent;
-    color: #fff;
-    font-family: 'Poppins', sans-serif;
-    text-transform: uppercase;
-    font-size: 8px;
-    display: flex;
-    flex-direction:row;
-    flex-wrap:wrap;
-    justify-content: center;
+  list-style: none;
+  border-bottom: 1px solid transparent;
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  text-transform: uppercase;
+  font-size: 8px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 a {
-    color: #fff;
-    
+  color: #fff;
+  text-decoration: none;
 }
 
 li {
-    padding: 10px 13px;
-    color: #fff;
+  padding: 10px 13px;
+  color: #fff;
 }
 
- 
-.intro-img{
-    display: flex;
-    justify-content: center;
-    
+.intro-img {
+  display: flex;
+  justify-content: center;
 }
 
-#banner-img{
-    height: auto;
-    width: 28vw;
-    
+#banner-img {
+  height: auto;
+  width: 28vw;
 }
 
-.intro-headline{
-    font-family: 'Bitter', sans-serif;
-    text-align: center;
-    color: #f9f4f2;
-    font-size: 30px;
+.intro-headline {
+  font-family: "Bitter", sans-serif;
+  text-align: center;
+  color: #f9f4f2;
+  font-size: 30px;
 }
 
 .intro-description {
-    font-family: 'Poppins',serif;
-    font-size: 10px;
-    color: #f9f4f2;
-    text-align: center;
-    
+  font-family: "Poppins", serif;
+  font-size: 10px;
+  color: #f9f4f2;
+  text-align: center;
 }
 
 .intro-button {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 #more {
-    font-size: 8px;
-    font-weight: bold;
-    margin: 10px;
-    border-radius:  50px;
-    text-transform: uppercase;
-    color: #F9F4F2;
-    background-color: #6B63B5;
-    font-family: 'Poppins', sans-serif;
-    border: none;
-    width: 200px;
-    height: 30px;
-       
+  font-size: 8px;
+  font-weight: bold;
+  margin: 10px;
+  border-radius: 50px;
+  text-transform: uppercase;
+  color: #f9f4f2;
+  background-color: #6b63b5;
+  font-family: "Poppins", sans-serif;
+  border: none;
+  width: 200px;
+  height: 30px;
 }
 
-#more:hover{
-    background-color: #514a92;
+#more:hover {
+  background-color: #514a92;
 }
 
-.slider{
-    display: flex;
-    flex-direction: row;
-    
-       
+#diamond {
+  width: 1vw;
+  display: block;
+  margin: auto;
+  background-color: white;
+  margin-bottom: 40px;
+  margin-top: 40px;
+  
+  
 }
 
-.slide1{
-    display: flex;
-    margin-right: 50px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color:#F9F4F2;
+.section2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
-.slide2 {
-    display: flex;
-    margin-right: 50px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: #F9F4F2;
+.slide {
+  display: flex;
+  margin-right: 32px;
+  flex-direction: column;
 }
 
-.slide3 {
-    display: flex;
-    margin-right: 50px;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    color: #F9F4F2;
+.sliderimg {
+  width: 18vw;
+  position: static;
+  display: flex;
 }
+
+.slidetitle {
+  font-family: "Poppins", serif;
+  font-size: 8px;
+  color: #f9f4f2;
+  margin-bottom: -10px;
+}
+
+.slidep {
+  font-family: "Poppins", serif;
+  font-size: 15px;
+  color: #f9f4f2;
+}
+
+.words {
+  display: flex;
+  flex-direction: column;
+  margin-top: -48px;
+  margin-left: 30px;
+}
+
+.section3 {
+  border-top: 1px solid hsla(0, 0%, 100%, 0.15);
+  position: relative; 
+  background: linear-gradient(to right, black, transparent);
+  z-index: 1;
+  
+} 
+
+.pinimg {
+  
+  width: 50vw;
+  margin-top: 80px;
+  margin-right: 120px;
+  margin-bottom: 150px;
+  float: right;
+  z-index: 2;
+  
+}
+
+.moveme{
+   position: absolute;
+   margin-left: 200px;
+   z-index: 3;
+}
+
+.sect3header {
+  font-family: "Bitter", sans-serif;
+  color: #f9f4f2;
+  font-size: 30px;
+  text-align: right;
+  margin-top: 130px;
+}
+
+.moreWords {
+  font-family: "Poppins", serif;
+  font-size: 10px;
+  color: #f9f4f2;
+  text-align: right;
+      
+}
+
+.pinButton {
+  display: flex;
+  justify-content:flex-end;
+}
+
+#learnMore {
+  font-size: 8px;
+  font-weight: bold;
+  border-radius: 50px;
+  text-transform: uppercase;
+  color: #f9f4f2;
+  background-color: #6b63b5;
+  font-family: "Poppins", sans-serif;
+  border: none;
+  width: 150px;
+  height: 30px;
+  float: left;
+}
+
+#learnMore:hover {
+  background-color: #514a92;
+}
+
