--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 body {
   background-color: black;
-  background: linear-gradient(to bottom, black, transparent ), url(./assets/simple_starfield_background__1_by_reis1989_da950d0.jpg);
+  background: linear-gradient(to bottom, black, transparent),
+    url(./assets/simple_starfield_background__1_by_reis1989_da950d0.jpg);
   background-repeat: no-repeat;
-  background-size:cover;
+  background-size: cover;
   width: 100%;
 }
 
 .background1 {
-  background: linear-gradient(to top, black, transparent ), url(./assets/background1.jpg);
+  background: linear-gradient(to top, black, transparent),
+    url(./assets/background1.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
@@ -16,6 +18,10 @@ body {
 .heading {
   height: 3.5vw;
   position: sticky;
+}
+
+.heading:hover {
+  background-color: #424949;
 }
 
 #login {
@@ -27,7 +33,7 @@ body {
   text-transform: uppercase;
   color: #f9f4f2;
   background-color: #6b63b5;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif; /*supposed to be Sofia Pro*/
   border: none;
 }
 
@@ -49,26 +55,33 @@ header {
   z-index: 9999;
   width: 100%;
   overflow: hidden;
-  
 }
 
 .nav-bar {
   border-top: 1px solid hsla(0, 0%, 100%, 0.15);
   position: relative;
   background-color: transparent;
-   
 }
 
 .nav-bar:hover {
+  background-color: black;
+}
+
+.heading:hover,
+.nav-bar:hover {
+  transition-property: inherit;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-in;
 }
 
 ul {
   list-style: none;
   border-bottom: 1px solid transparent;
   color: #fff;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif; /*supposed to be Sofia Pro*/
   text-transform: uppercase;
   font-size: 8px;
+  font-weight: bold;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -80,8 +93,12 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  text-decoration: 1px underline solid #514a92;
+}
+
 li {
-  padding: 10px 13px;
+  padding: 5px 13px;
   color: #fff;
 }
 
@@ -96,14 +113,14 @@ li {
 }
 
 .intro-headline {
-  font-family: "Bitter", sans-serif;
+  font-family: "Bitter", serif; /*supposed to be Bluu Next*/
   text-align: center;
   color: #f9f4f2;
   font-size: 30px;
 }
 
 .intro-description {
-  font-family: "Poppins", serif;
+  font-family: "Poppins", sans-serif; /*supposed to be Sofia Pro*/
   font-size: 10px;
   color: #f9f4f2;
   text-align: center;
@@ -122,7 +139,7 @@ li {
   text-transform: uppercase;
   color: #f9f4f2;
   background-color: #6b63b5;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif; /*supposed to be Sofia Pro*/
   border: none;
   width: 200px;
   height: 30px;
@@ -133,14 +150,12 @@ li {
 }
 
 #diamond {
-  width: 1vw;
+  width: 2vw;
   display: block;
   margin: auto;
-  background-color: white;
+  background-color: transparent;
   margin-bottom: 40px;
   margin-top: 40px;
-  
-  
 }
 
 .section2 {
@@ -162,14 +177,14 @@ li {
 }
 
 .slidetitle {
-  font-family: "Poppins", serif;
+  font-family: "Mate SC", serif; /*Supposed to be Mason Sans OT*/
   font-size: 8px;
   color: #f9f4f2;
   margin-bottom: -10px;
 }
 
 .slidep {
-  font-family: "Poppins", serif;
+  font-family: "Bitter", serif; /*supposed to be Bluu Next*/
   font-size: 15px;
   color: #f9f4f2;
 }
@@ -183,31 +198,28 @@ li {
 
 .section3 {
   border-top: 1px solid hsla(0, 0%, 100%, 0.15);
-  position: relative; 
+  position: relative;
   background: linear-gradient(to right, black, transparent);
   z-index: 1;
-  
-} 
+}
 
 .pinimg {
-  
   width: 50vw;
   margin-top: 80px;
   margin-right: 120px;
   margin-bottom: 150px;
   float: right;
   z-index: 2;
-  
 }
 
-.moveme{
-   position: absolute;
-   margin-left: 200px;
-   z-index: 3;
+.moveme {
+  position: absolute;
+  margin-left: 200px;
+  z-index: 3;
 }
 
 .sect3header {
-  font-family: "Bitter", sans-serif;
+  font-family: "Bitter", serif; /*supposed to be Bluu Next*/
   color: #f9f4f2;
   font-size: 30px;
   text-align: right;
@@ -215,16 +227,15 @@ li {
 }
 
 .moreWords {
-  font-family: "Poppins", serif;
+  font-family: "Poppins", sans-serif; /*supposed to be Sofia Pro*/
   font-size: 10px;
   color: #f9f4f2;
   text-align: right;
-      
 }
 
 .pinButton {
   display: flex;
-  justify-content:flex-end;
+  justify-content: flex-end;
 }
 
 #learnMore {
@@ -234,7 +245,7 @@ li {
   text-transform: uppercase;
   color: #f9f4f2;
   background-color: #6b63b5;
-  font-family: "Poppins", sans-serif;
+  font-family: "Poppins", sans-serif; /*supposed to be Sofia Pro*/
   border: none;
   width: 150px;
   height: 30px;
@@ -245,3 +256,15 @@ li {
   background-color: #514a92;
 }
 
+.arrow {
+  border: solid #f9f4f2;
+  border-width: 0 1px 1px 0;
+  display: inline-block;
+  padding: 2px;
+  margin-left: 2px;
+}
+
+.down {
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+}
